
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int n ;
 int printf (char*,int ) ;

int
main (int argc, char * argv [])
{
 while (1) printf ("%d ", n ++ );
 return (0);
}
